--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para WhatsApp usando whatsapp-web.js",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "server": "node -e 'require(\"http\").createServer((_, res) => res.end(\"OK\")).listen(process.env.PORT || 3000)'"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.19.0",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "engines": {
-    "node": "14.x"
+    "whatsapp-web.js": "^1.18.0",
+    "puppeteer": "^18.0.0",
+    "node-schedule": "^2.1.0"
   }
 }
