--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "whatsapp-web.js": "^1.0.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "node-schedule": "^2.0.0"  // Asegúrate de que esta línea esté aquí
   },
   "devDependencies": {},
   "author": "",
