--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar mensajes rápidamente en un grupo de WhatsApp.",
+  "description": "Bot para enviar mensajes a un grupo de WhatsApp de forma automática.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.18.4",
     "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.0.3"
+    "whatsapp-web.js": "^1.19.5"
   }
 }
