--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar mensajes a un grupo de WhatsApp de forma automática.",
+  "description": "Bot para enviar mensajes a un grupo de WhatsApp",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "whatsapp-web.js": "^1.20.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.19.5"
+    "ioredis": "^5.3.1"
   }
 }
