--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar mensajes a un grupo de WhatsApp",
+  "description": "Bot de WhatsApp que envía mensajes automáticamente al grupo",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.20.0",
-    "qrcode-terminal": "^0.12.0",
-    "ioredis": "^5.3.1"
+    "whatsapp-web.js": "^1.0.0",  // Asegúrate de tener la versión más reciente de whatsapp-web.js
+    "redis": "^4.0.0",  // Asegúrate de tener la versión más reciente de redis
+    "dotenv": "^10.0.0",  // Si no lo tienes ya, puedes usar dotenv para gestionar variables de entorno
+    "qrcode-terminal": "^0.12.0",  // Para mostrar el código QR en la terminal
+    "axios": "^0.21.1"  // Si necesitas realizar solicitudes HTTP, como en el caso de la verificación de la sesión
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
