--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot de WhatsApp que envía mensajes automáticamente al grupo",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.0.0",
-    "redis": "^4.0.0",
-    "dotenv": "^10.0.0",
-    "qrcode-terminal": "^0.12.0",
-    "axios": "^0.21.1"
-  },
-  "devDependencies": {},
-  "engines": {
-    "node": ">=14.0.0"
+    "@whatsapp/web.js": "^1.0.0",
+    "redis": "^4.0.0"
   }
 }
