--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@whatsapp/web.js": "^1.0.0",
+    "whatsapp-web.js": "^1.0.0",
     "redis": "^4.0.0"
   }
 }
