--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "Bot para enviar mensajes a un grupo de WhatsApp",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.0.0",
-    "redis": "^4.0.0"
-  }
+    "qrcode-terminal": "^0.12.0",
+    "express": "^4.17.1",
+    "redis": "^4.0.0",
+    "cron": "^1.8.2"
+  },
+  "author": "Tu Nombre",
+  "license": "MIT"
 }
