--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "groupName": "Nombre del grupo",
-  "messageContent": "Mensaje automático del bot",
-  "scheduledTime": "13:45"
+  "groupName": "Prueba",
+  "messageContent": "Este es el mensaje que quiero enviar",
+  "scheduledTime": "15:00"
 }
