--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar mensajes a un grupo de WhatsApp",
-  "main": "index.js",
+  "description": "Bot para enviar un mensaje al grupo de WhatsApp automáticamente",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.0.0",
+    "whatsapp-web.js": "^1.18.0",
     "qrcode-terminal": "^0.12.0",
-    "express": "^4.17.1",
     "redis": "^4.0.0",
-    "cron": "^1.8.2"
-  },
-  "author": "Tu Nombre",
-  "license": "MIT"
+    "moment-timezone": "^0.5.34",
+    "cron": "^2.1.0"
+  }
 }
