--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-  "groupName": "Prueba",
-  "messageContent": "Este es el mensaje que quiero enviar",
-  "scheduledTime": "14:30"
+  "group_name": "nombre-del-grupo",
+  "message_content": "¡Este es el mensaje que se enviará a las 13:00!",
+  "target_time": "13:00",  // Hora objetivo en formato HH:mm
+  "redis_url": "redis://red-ctqi1hbtq21c73a1s6ug:6379"
 }
