--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar mensajes a un grupo de WhatsApp en un momento determinado.",
+  "description": "WhatsApp bot for sending messages at the exact moment the group is unblocked",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.18.1",
-    "redis": "^4.1.0",
+    "whatsapp-web.js": "^1.19.0",
+    "redis": "^4.0.0",
     "moment-timezone": "^0.5.34"
   },
   "engines": {
