--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot para enviar el primer mensaje en un grupo de WhatsApp",
+  "description": "Bot de WhatsApp que envía un mensaje a un grupo a una hora determinada.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.18.0",
+    "whatsapp-web.js": "^1.17.2",
     "qrcode-terminal": "^0.12.0",
     "moment": "^2.29.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
