--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "groupName": "Prueba",
-  "message": "Este es el mensaje que el bot enviará.",
-  "sendTime": "17:00"
+  "message": "Este es el mensaje que quiero enviar.",
+  "sendTime": "17:45"
 }
