--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Bot de WhatsApp que envía un mensaje a un grupo a una hora determinada.",
+  "description": "WhatsApp Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.17.2",
+    "whatsapp-web.js": "^1.18.0",
     "qrcode-terminal": "^0.12.0",
-    "moment": "^2.29.1"
+    "moment-timezone": "^0.5.34"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
