--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "groupName": "Prueba",
-  "message": "Este es el mensaje que quiero enviar.",
-  "sendTime": "17:45"
+  "message": "¡Este es el primer mensaje!",
+  "time": "17:40"
 }
